--- a/features.html
+++ b/features.html
@@ -81,7 +81,10 @@
 				</div>
 				<div class="card flex">
 					<i class="fas fa-upload fa-3x"></i>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil
+						repellendus cum cupiditate error libero animi!
+					</p>
 				</div>
 				<div class="card flex">
 					<i class="fas fa-database fa-3x"></i>
